--- a/index.html
+++ b/index.html
@@ -383,9 +383,9 @@
     </section>
 
     
-    <footer id="footer">
+    <div>
       <h2>Restraunt &copy; all rights reserved</h2>
-    </footer>
+    </div>
   </body>
 <!-- 
   .................../ JS Code for smooth scrolling /...................... -->
